// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`private - LN - acumulado - Author - wikiAuthor Test de snapshot Bio Author 1`] = `
<div>
  <section
    class="mod-wikiauthor  "
  >
    <div
      class="row"
    >
      <div
        class="col-12 col-tablet-4 col-deskxl-3"
      >
        <figure
          class="mod-figure --horizontal"
        >
          <div
            class="placeholder "
          >
            <img
              alt="Joaquín Morales Solá"
              class="com-image "
              decoding="async"
              fetchpriority="high"
              height="280"
              loading="eager"
              src="https://bucket2.glanacion.com/anexos/fotos/95/3037695h320.png"
              srcset="https://bucket2.glanacion.com/anexos/fotos/95/3037695h320.png"
              width="280"
            />
          </div>
        </figure>
      </div>
      <div
        class="col-12 col-tablet-8 col-deskxl-9"
      >
        <div
          class="com-container  --info"
        >
          <h1
            class="com-title --font-primary --xl --font-extra"
          >
            Joaquín Morales Solá
          </h1>
          <div
            class="com-container  --contact"
          >
            <a
              class="com-link"
              href="https://google.com"
              title=""
            >
              https://google.com
            </a>
          </div>
          <p
            class="com-text --bio --twoxs"
          >
            Ejerce el periodismo desde los 16 años cuando ingresó al
                diario La Gaceta de Tucumán. En 1975, Clarín lo convocó para
                ser prosecretario de la sección Política. Durante 12 años
                fue segundo jefe de Redacción y autor de la columna política
                dominical de ese diario. Fue columnista político del
                noticiero de Telefé y del programa "Tiempo Nuevo", de
                Bernardo Neustadt. Durante 1997, condujo "Dos en la noticia"
                junto con Magdalena Ruiz Guiñazú, por el ex Canal 9.
                Actualmente es columnista político del diario LA NACION. En
                1990, el gobierno de Italia lo condecoró con la Orden al
                Mérito de la República Italiana. Posteriormente, en 1992,
                España lo distinguió con la Orden de Isabel la Católica. En
                1998, recibió la Orden Nacional al Mérito que entrega la
                república de Francia. En su último libro, "Sin excusas"
                (Sudamericana), Morales Solá revela diálogos con el ex
                vicepresidente Chacho Alvarez, sobre la trama secreta de los
                sobornos en el Senado, las causas de su renuncia y los
                errores que condujeron al fracaso de la Alianza.
          </p>
          <div
            class="com-container  --educacion"
          >
            <dl
              class="mod-descriptionlist  --twoxs"
            >
              <dt
                class="com-subtitle --twoxs "
              >
                Educación
              </dt>
              <dd
                class="com-itemlist  --twoxs"
              >
                Periodismo, Universidad de Buenos Aires, 1989.
              </dd>
              <dd
                class="com-itemlist  --twoxs"
              >
                Periodismo, Universidad de Buenos Aires, 1995.
              </dd>
            </dl>
          </div>
          <div
            class="com-container  "
          >
            <dl
              class="mod-descriptionlist --idiomas --twoxs"
            >
              <dt
                class="com-subtitle --twoxs --idiomas"
              >
                Ubicación:
              </dt>
              Argentina
            </dl>
          </div>
          <div
            class="com-container  --educacion"
          >
            <dl
              class="mod-descriptionlist --idiomas --twoxs"
            >
              <dt
                class="com-subtitle --twoxs --idiomas"
              >
                Áreas de interés:
              </dt>
              Politica
            </dl>
          </div>
          <div
            class="com-container  --reconocimientos"
          >
            <dl
              class="mod-descriptionlist  --twoxs"
            >
              <dt
                class="com-subtitle --twoxs "
              >
                Reconocimientos
              </dt>
              <dd
                class="com-itemlist  --twoxs"
              >
                Condecorado por el gobierno de la República de Brasil con la Orden de Río Branco, 2002.
              </dd>
              <dd
                class="com-itemlist  --twoxs"
              >
                Condecorado por el gobierno de la República de Brasil con la Orden de Río Branco, 2002.
              </dd>
            </dl>
          </div>
          <div
            class="com-container  "
          >
            <dl
              class="mod-descriptionlist --idiomas --twoxs"
            >
              <dt
                class="com-subtitle --twoxs --idiomas"
              >
                Idiomas:
              </dt>
              Ingles, Frances
            </dl>
          </div>
          <div
            class="com-container  "
          >
            <dl
              class="mod-descriptionlist --membresia --twoxs"
            >
              <dt
                class="com-subtitle --twoxs --membresia"
              >
                Membresías profesionales:
              </dt>
              Academia de Periodismo.
            </dl>
          </div>
          <div
            class="com-container  "
          >
            <dl
              class="mod-descriptionlist  --twoxs"
            >
              <dt
                class="com-subtitle --twoxs "
              >
                Publicaciones
              </dt>
              <dd
                class="com-itemlist  --twoxs"
              >
                <a
                  class="com-link"
                  href="https://google.com"
                  title=""
                >
                  Carlos Pagni en Odisea Argentina
                </a>
                , Editorial
              </dd>
            </dl>
          </div>
          <div
            class="com-container  "
          >
            <dl
              class="mod-descriptionlist  --twoxs"
            >
              <dt
                class="com-subtitle --twoxs "
              >
                Podcast
              </dt>
              <dd
                class="com-itemlist  --twoxs"
              >
                <a
                  class="com-link"
                  href="http://google.com"
                  title=""
                >
                  Un podcast
                </a>
              </dd>
              <dd
                class="com-itemlist  --twoxs"
              >
                <a
                  class="com-link"
                  href="http://google.com"
                  title=""
                >
                  Dos podcast
                </a>
              </dd>
            </dl>
          </div>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="flex gap-8 gap-16_m flex-column flex-row_m py-32 mb-40 border border-top border-bottom border-thin border-light-300 ai-center_lg"
          data-testid="wiki-social-container"
        >
          <h4
            class="text text-16 text-black font-bold mt-4_m"
          >
            Conectar
          </h4>
          <div
            class="relative overflow-hidden w-100"
          >
            <ul
              class="flex flex-wrap_lg --scroll-x --degrade-scroll_max1279 pr-60"
            >
              <li
                class="flex ai-center"
              >
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="https://x.com/@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a x"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="twitter"
                    />
                  </i>
                  x
                </a>
              </li>
              <li
                class="flex ai-center"
              >
                <i
                  class="icon ml-4 mr-4 --icon-16"
                >
                  <mock-icon
                    fill="#ccc"
                    name="bulletFilled"
                  />
                </i>
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a facebook"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="facebook"
                    />
                  </i>
                  facebook
                </a>
              </li>
              <li
                class="flex ai-center"
              >
                <i
                  class="icon ml-4 mr-4 --icon-16"
                >
                  <mock-icon
                    fill="#ccc"
                    name="bulletFilled"
                  />
                </i>
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a youtube"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="youtube"
                    />
                  </i>
                  youtube
                </a>
              </li>
              <li
                class="flex ai-center"
              >
                <i
                  class="icon ml-4 mr-4 --icon-16"
                >
                  <mock-icon
                    fill="#ccc"
                    name="bulletFilled"
                  />
                </i>
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a instagram"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="instagram"
                    />
                  </i>
                  instagram
                </a>
              </li>
              <li
                class="flex ai-center"
              >
                <i
                  class="icon ml-4 mr-4 --icon-16"
                >
                  <mock-icon
                    fill="#ccc"
                    name="bulletFilled"
                  />
                </i>
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a linkedin"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="linkedin"
                    />
                  </i>
                  linkedin
                </a>
              </li>
              <li
                class="flex ai-center"
              >
                <i
                  class="icon ml-4 mr-4 --icon-16"
                >
                  <mock-icon
                    fill="#ccc"
                    name="bulletFilled"
                  />
                </i>
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a rss"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="rss"
                    />
                  </i>
                  rss
                </a>
              </li>
              <li
                class="flex ai-center"
              >
                <i
                  class="icon ml-4 mr-4 --icon-16"
                >
                  <mock-icon
                    fill="#ccc"
                    name="bulletFilled"
                  />
                </i>
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a medium"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="medium"
                    />
                  </i>
                  medium
                </a>
              </li>
              <li
                class="flex ai-center"
              >
                <i
                  class="icon ml-4 mr-4 --icon-16"
                >
                  <mock-icon
                    fill="#ccc"
                    name="bulletFilled"
                  />
                </i>
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a pinterest"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="pinterest"
                    />
                  </i>
                  pinterest
                </a>
              </li>
              <li
                class="flex ai-center"
              >
                <i
                  class="icon ml-4 mr-4 --icon-16"
                >
                  <mock-icon
                    fill="#ccc"
                    name="bulletFilled"
                  />
                </i>
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a soundcloud"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="soundcloud"
                    />
                  </i>
                  soundcloud
                </a>
              </li>
              <li
                class="flex ai-center"
              >
                <i
                  class="icon ml-4 mr-4 --icon-16"
                >
                  <mock-icon
                    fill="#ccc"
                    name="bulletFilled"
                  />
                </i>
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a snapchat"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="snapchat"
                    />
                  </i>
                  snapchat
                </a>
              </li>
              <li
                class="flex ai-center"
              >
                <i
                  class="icon ml-4 mr-4 --icon-16"
                >
                  <mock-icon
                    fill="#ccc"
                    name="bulletFilled"
                  />
                </i>
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a whatsapp"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="whatsapp"
                    />
                  </i>
                  whatsapp
                </a>
              </li>
              <li
                class="flex ai-center"
              >
                <i
                  class="icon ml-4 mr-4 --icon-16"
                >
                  <mock-icon
                    fill="#ccc"
                    name="bulletFilled"
                  />
                </i>
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a tumblr"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="tumblr"
                    />
                  </i>
                  tumblr
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`private - LN - acumulado - Author - wikiAuthor Test de snapshot Bio Author Sin muchos datos 1`] = `
<div>
  <section
    class="mod-wikiauthor  "
  >
    <div
      class="row"
    >
      <div
        class="col-12 col-tablet-8 col-deskxl-9"
      >
        <div
          class="com-container  --info"
        >
          <h1
            class="com-title --font-primary --xl --font-extra"
          >
            Joaquín Morales Solá
          </h1>
          <div
            class="com-container  --contact"
          >
            <a
              class="com-link"
              href="https://google.com"
              title=""
            >
              https://google.com
            </a>
          </div>
          <p
            class="com-text --bio --twoxs"
          >
            Ejerce el periodismo desde los 16 años cuando ingresó al
                diario La Gaceta de Tucumán. En 1975, Clarín lo convocó para
                ser prosecretario de la sección Política. Durante 12 años
                fue segundo jefe de Redacción y autor de la columna política
                dominical de ese diario.
          </p>
          <div
            class="com-container  "
          >
            <dl
              class="mod-descriptionlist --idiomas --twoxs"
            >
              <dt
                class="com-subtitle --twoxs --idiomas"
              >
                Idiomas:
              </dt>
              Ingles, Frances
            </dl>
          </div>
          <div
            class="com-container  "
          >
            <dl
              class="mod-descriptionlist  --twoxs"
            >
              <dt
                class="com-subtitle --twoxs "
              >
                Podcast
              </dt>
              <dd
                class="com-itemlist  --twoxs"
              >
                <a
                  class="com-link"
                  href="http://google.com"
                  title=""
                >
                  Dos podcast
                </a>
              </dd>
            </dl>
          </div>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="flex gap-8 gap-16_m flex-column flex-row_m py-32 mb-40 border border-top border-bottom border-thin border-light-300 ai-center_lg"
          data-testid="wiki-social-container"
        >
          <h4
            class="text text-16 text-black font-bold mt-4_m"
          >
            Conectar
          </h4>
          <div
            class="relative overflow-hidden w-100"
          >
            <ul
              class="flex flex-wrap_lg --scroll-x --degrade-scroll_max1279 pr-60"
            >
              <li
                class="flex ai-center"
              >
                <a
                  class="link ln-link gap-4 inline-flex ai-center font-bold"
                  href="https://x.com/@moralessola"
                  rel="nofollow"
                  target="_blank"
                  title="Ir a x"
                >
                  <i
                    class="icon --icon-32"
                  >
                    <mock-icon
                      fill="#333333"
                      name="twitter"
                    />
                  </i>
                  x
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
